Update and rename action to action.yml

--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,12 @@ inputs:
   repository:
     description: 'Repository on registry'
     required: true
-
+  registry:
+    description: 'Registry hostname'
+    required: false
+  tag:
+    description: 'Image tag'
+    required: false
  
 runs:
   using: 'docker'
@@ -23,4 +28,6 @@ runs:
     - ${{ inputs.username }}
     - ${{ inputs.password }}
     - ${{ inputs.repository }}
+    - ${{ inputs.registry }}
+    - ${{ inputs.tag }}
 
