--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ inputs:
  
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: './Dockerfile'
   args:
     - ${{ inputs.username }}
     - ${{ inputs.password }}
